<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"

    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:scaleType="centerCrop">

        <ImageView
            android:id="@+id/img_item"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="8dp"
            android:scaleType="centerCrop"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.0"
            tools:src="@tools:sample/avatars" />


        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="1dp"
            android:ellipsize="end"
            android:maxLines="5"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="@+id/tv_name_item"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_price"
            card_view:layout_constraintVertical_bias="0.0"
            tools:text="@string/deskripsi_barang" />

        <TextView
            android:id="@+id/tv_name_item"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="1dp"
            android:text="@string/nama_item"
            android:textSize="15sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toTopOf="@+id/tv_price"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toEndOf="@+id/img_item"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:text="@string/nama_item" />


        <TextView
            android:id="@+id/Price"
            android:layout_width="58dp"
            android:layout_height="22dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/harga"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toTopOf="@+id/tv_item_description"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="@+id/tv_name_item"
            card_view:layout_constraintTop_toTopOf="@+id/tv_price"
            card_view:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="68dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/price_item"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toTopOf="@+id/tv_item_description"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toEndOf="@+id/Price"
            card_view:layout_constraintStart_toStartOf="@+id/Price"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_name_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
